--- a/index.html
+++ b/index.html
@@ -18,5 +18,95 @@
     <div class="b">
       <a href="#" onclick="openLink()" class="button"> Reward Yourself </a>
     </div>
+    <div class="tags">
+      <div class="col">
+        <label>
+          <input
+            type="checkbox"
+            value="https://www.youtube.com"
+            rel="accounting"
+          />You Tube</label
+        >
+        <label>
+          <input
+            type="checkbox"
+            value="https://www.reddit.com"
+            rel="courier"
+          />Reddit</label
+        >
+        <label>
+          <input
+            type="checkbox"
+            value="https://discord.com/app"
+            rel="video-games"
+          />Discord</label
+        >
+        <label>
+          <input type="checkbox" value="https://9gag.com" rel="video-games" />9
+          Gag</label
+        >
+      </div>
+      <div class="col">
+        <label>
+          <input
+            type="checkbox"
+            value="https://instagram.com"
+            rel="video-games"
+          />Instagram</label
+        >
+        <label>
+          <input
+            type="checkbox"
+            value="https://www.facebook.com"
+            rel="video-games"
+          />Facebook</label
+        >
+        <label>
+          <input
+            type="checkbox"
+            value="https://www.twitter.com"
+            rel="video-games"
+          />Twitter</label
+        >
+        <label>
+          <input
+            type="checkbox"
+            value="https://www.messenger.com"
+            rel="video-games"
+          />Messenger</label
+        >
+      </div>
+      <div class="col">
+        <label>
+          <input
+            type="checkbox"
+            value="https://github.com"
+            rel="video-games"
+          />Github</label
+        >
+        <label>
+          <input
+            type="checkbox"
+            value="https://stackoverflow.com"
+            rel="video-games"
+          />StackOverflow</label
+        >
+        <label>
+          <input
+            type="checkbox"
+            value="https://gitlab.com"
+            rel="video-games"
+          />Gitlab</label
+        >
+        <label>
+          <input
+            type="checkbox"
+            value="https://mlh.io"
+            rel="video-games"
+          />MLH</label
+        >
+      </div>
+    </div>
   </body>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </html>
