--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
       So, you did your study?<br />
       Now, take a break!!!
     </div>
-
+    <div class="but">
+      <a href="#" onclick="showHide()" class="ah">
+        <i class="fa fa-cog fa-4x icon-rotate"></i
+      ></a>
+    </div>
     <br />
     <div class="b">
       <a href="#" onclick="openLink()" class="button"> Reward Yourself </a>
     </div>
-    <div class="tags">
+    <div class="tags" id="setting" style="display: none">
       <div class="col">
         <label>
           <input type="checkbox" value="https://www.youtube.com" />You
@@ -78,5 +82,8 @@
       </div>
     </div>
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+  <script src="https://use.fontawesome.com/9a9ae641ba.js"></script>
 </html>
