--- a/index.html
+++ b/index.html
@@ -31,16 +31,21 @@
     <div class="tags" id="setting" style="display: none">
       <div class="col">
         <label>
-          <input type="checkbox" value="https://www.youtube.com" />You
+          <input type="checkbox" value="https://www.youtube.com" checked />You
           Tube</label
         >
         <label>
-          <input type="checkbox" value="https://www.reddit.com" />Reddit</label
+          <input
+            type="checkbox"
+            value="https://www.reddit.com"
+            checked
+          />Reddit</label
         >
         <label>
           <input
             type="checkbox"
             value="https://discord.com/app"
+            checked
           />Discord</label
         >
         <label> <input type="checkbox" value="https://9gag.com" />9 Gag</label>
@@ -73,7 +78,11 @@
       </div>
       <div class="col">
         <label>
-          <input type="checkbox" value="https://github.com" />Github</label
+          <input
+            type="checkbox"
+            value="https://github.com"
+            checked
+          />Github</label
         >
         <label>
           <input
